white space width fix?

--- a/css/home/home-narrower.css
+++ b/css/home/home-narrower.css
@@ -74,6 +74,8 @@ a {
   top: 110%;
   padding-top: 15px;
   z-index: 2;
+  padding-left: 8px;
+  margin-left: -8px;
 }
 
 .author-name {
